--- a/DirectX12.vcxproj.filters
+++ b/DirectX12.vcxproj.filters
@@ -186,9 +186,6 @@
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp">
       <Filter>NewEngine\Source\Object\3D</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Object\3D\DebugCamera.cpp">
-      <Filter>NewEngine\Source\Object\3D</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Object\3D\Line.cpp">
       <Filter>NewEngine\Source\Object\3D</Filter>
     </ClCompile>
@@ -235,6 +232,9 @@
       <Filter>NewEngine\Source\Util</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Util\BezierCurve.cpp">
+      <Filter>NewEngine\Source\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Util\Timer.cpp">
       <Filter>NewEngine\Source\Util</Filter>
     </ClCompile>
   </ItemGroup>
@@ -320,9 +320,6 @@
     <ClInclude Include="NewEngine\Object\3D\Camera.h">
       <Filter>NewEngine\Header\Object\3D</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\3D\DebugCamera.h">
-      <Filter>NewEngine\Header\Object\3D</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Object\3D\Line.h">
       <Filter>NewEngine\Header\Object\3D</Filter>
     </ClInclude>
@@ -375,6 +372,9 @@
       <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Util\BezierCurve.h">
+      <Filter>NewEngine\Header\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Util\Timer.h">
       <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
   </ItemGroup>
