--- a/DirectX12.vcxproj
+++ b/DirectX12.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Line.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Material.cpp" />
+    <ClCompile Include="NewEngine\Object\3D\Mesh.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Model.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Object3D.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\ConstantBuffer.cpp" />
@@ -220,6 +221,7 @@
     <ClInclude Include="NewEngine\Object\3D\Camera.h" />
     <ClInclude Include="NewEngine\Object\3D\Line.h" />
     <ClInclude Include="NewEngine\Object\3D\Material.h" />
+    <ClInclude Include="NewEngine\Object\3D\Mesh.h" />
     <ClInclude Include="NewEngine\Object\3D\Model.h" />
     <ClInclude Include="NewEngine\Object\3D\Object3D.h" />
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h" />
