ライト適用

--- a/DirectX12.vcxproj
+++ b/DirectX12.vcxproj
@@ -172,12 +172,12 @@
     <ClCompile Include="NewEngine\Object\2D\Sprite.cpp" />
     <ClCompile Include="NewEngine\Object\2D\Texture.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp" />
+    <ClCompile Include="NewEngine\Object\3D\Light.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Line.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Material.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Mesh.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Model.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Object3D.cpp" />
-    <ClCompile Include="NewEngine\Render\Buffer\ConstantBuffer.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\TextureBuffer.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\VertexBuffer.cpp" />
@@ -219,12 +219,14 @@
     <ClInclude Include="NewEngine\Object\2D\Sprite.h" />
     <ClInclude Include="NewEngine\Object\2D\Texture.h" />
     <ClInclude Include="NewEngine\Object\3D\Camera.h" />
+    <ClInclude Include="NewEngine\Object\3D\Light.h" />
     <ClInclude Include="NewEngine\Object\3D\Line.h" />
     <ClInclude Include="NewEngine\Object\3D\Material.h" />
     <ClInclude Include="NewEngine\Object\3D\Mesh.h" />
     <ClInclude Include="NewEngine\Object\3D\Model.h" />
     <ClInclude Include="NewEngine\Object\3D\Object3D.h" />
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h" />
+    <ClInclude Include="NewEngine\Render\Buffer\ConstantBufferData.h" />
     <ClInclude Include="NewEngine\Render\Buffer\IndexBuffer.h" />
     <ClInclude Include="NewEngine\Render\Buffer\TextureBuffer.h" />
     <ClInclude Include="NewEngine\Render\Buffer\VertexBuffer.h" />
