--- a/DirectX12.vcxproj.filters
+++ b/DirectX12.vcxproj.filters
@@ -105,9 +105,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="NewEngine\Render\Buffer\ConstantBuffer.cpp">
-      <Filter>NewEngine\Source\Render\Buffer</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
       <Filter>NewEngine\Source\Render\Buffer</Filter>
     </ClCompile>
@@ -238,6 +235,9 @@
       <Filter>NewEngine\Source\Util</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\3D\Mesh.cpp">
+      <Filter>NewEngine\Source\Object\3D</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\3D\Light.cpp">
       <Filter>NewEngine\Source\Object\3D</Filter>
     </ClCompile>
   </ItemGroup>
@@ -381,6 +381,12 @@
       <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Object\3D\Mesh.h">
+      <Filter>NewEngine\Header\Object\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\Buffer\ConstantBufferData.h">
+      <Filter>NewEngine\Header\Render\Buffer</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\Light.h">
       <Filter>NewEngine\Header\Object\3D</Filter>
     </ClInclude>
   </ItemGroup>
