--- a/DirectX12.vcxproj.filters
+++ b/DirectX12.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClCompile Include="NewEngine\Light\LightManager.cpp">
       <Filter>NewEngine\Source\Light</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Light\SpotLight.cpp">
+      <Filter>NewEngine\Source\Light</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -389,9 +392,6 @@
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBufferData.h">
       <Filter>NewEngine\Header\Render\Buffer</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\3D\PointLight.h">
-      <Filter>NewEngine\Header\Object\3D</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Object\3D\DirectionalLight.h">
       <Filter>NewEngine\Header\Light</Filter>
     </ClInclude>
@@ -402,6 +402,12 @@
       <Filter>Uncategorized\Header</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Light\LightManager.h">
+      <Filter>NewEngine\Header\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Light\SpotLight.h">
+      <Filter>NewEngine\Header\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\PointLight.h">
       <Filter>NewEngine\Header\Light</Filter>
     </ClInclude>
   </ItemGroup>
