--- a/imgui.ini
+++ b/imgui.ini
@@ -20,6 +20,11 @@ Pos=63,104
 Size=411,452
 Collapsed=1
 
+[Window][SpotLight]
+Pos=205,82
+Size=405,183
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
