当たり判定増やした

--- a/imgui.ini
+++ b/imgui.ini
@@ -21,12 +21,31 @@ Size=411,452
 Collapsed=1
 
 [Window][SpotLight]
-Pos=205,82
+Pos=26,111
 Size=405,183
 Collapsed=0
+DockId=0x00000004,1
+
+[Window][Collision Debug]
+Pos=829,175
+Size=423,303
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Dear ImGui Demo]
+Pos=624,3
+Size=550,680
+Collapsed=0
+
+[Window][Camera Option]
+Pos=829,175
+Size=423,303
+Collapsed=0
+DockId=0x00000004,1
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
+DockNode    ID=0x00000004 Pos=829,175 Size=423,303 Selected=0xBE42B986
 
