ライトの色を変数の型を変更した

--- a/imgui.ini
+++ b/imgui.ini
@@ -21,16 +21,16 @@ Size=411,452
 Collapsed=1
 
 [Window][SpotLight]
-Pos=808,111
-Size=423,303
+Pos=571,75
+Size=572,170
 Collapsed=0
-DockId=0x00000004,2
+DockId=0x00000008,2
 
 [Window][Collision Debug]
-Pos=808,111
-Size=423,303
+Pos=571,247
+Size=572,83
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000009,1
 
 [Window][Dear ImGui Demo]
 Pos=624,3
@@ -38,14 +38,28 @@ Size=550,680
 Collapsed=0
 
 [Window][Camera Option]
-Pos=808,111
-Size=423,303
+Pos=571,247
+Size=572,83
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000009,0
+
+[Window][PointLight]
+Pos=571,75
+Size=572,170
+Collapsed=0
+DockId=0x00000008,1
+
+[Window][DirectionalLight]
+Pos=571,75
+Size=572,170
+Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
-DockNode    ID=0x00000004 Pos=808,111 Size=423,303 Selected=0x5A94F141
+DockNode    ID=0x00000005 Pos=571,75 Size=572,255 Split=Y
+  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,170 Selected=0x5A94F141
+  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,83 Selected=0xD793C64C
 
