--- a/imgui.ini
+++ b/imgui.ini
@@ -16,19 +16,19 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Debug]
-Pos=63,104
-Size=411,452
-Collapsed=1
+Pos=450,33
+Size=393,97
+Collapsed=0
 
 [Window][SpotLight]
-Pos=468,71
-Size=572,170
+Pos=859,7
+Size=572,178
 Collapsed=0
 DockId=0x00000008,2
 
 [Window][Collision Debug]
-Pos=468,243
-Size=572,83
+Pos=859,187
+Size=572,464
 Collapsed=0
 DockId=0x00000009,1
 
@@ -38,20 +38,20 @@ Size=550,680
 Collapsed=0
 
 [Window][Camera Option]
-Pos=468,243
-Size=572,83
+Pos=859,187
+Size=572,464
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][PointLight]
-Pos=468,71
-Size=572,170
+Pos=859,7
+Size=572,178
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][DirectionalLight]
-Pos=468,71
-Size=572,170
+Pos=859,7
+Size=572,178
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,7 +59,7 @@ DockId=0x00000008,0
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
-DockNode    ID=0x00000005 Pos=468,71 Size=572,255 Split=Y
-  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,170 Selected=0x6EAC59E0
-  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,83 Selected=0xD793C64C
+DockNode    ID=0x00000005 Pos=859,7 Size=572,644 Split=Y
+  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,178 Selected=0x5A94F141
+  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,464 Selected=0xD793C64C
 
