--- a/imgui.ini
+++ b/imgui.ini
@@ -55,6 +55,11 @@ Size=572,178
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Quaternion]
+Pos=60,60
+Size=514,263
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
