シェーダファイルの名前変更

--- a/DirectX12.vcxproj
+++ b/DirectX12.vcxproj
@@ -267,7 +267,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\Basic.hlsli" />
-    <None Include="Shader\ObjectBasic.hlsli" />
+    <None Include="Shader\Object3DH.hlsli" />
     <None Include="Shader\RenderTexture.hlsli" />
     <None Include="Shader\Silhouette.hlsli" />
     <None Include="Shader\Sprite.hlsli" />
@@ -307,13 +307,13 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="Shader\ObjectBasicPS.hlsl">
+    <FxCompile Include="Shader\Object3DPS.hlsl">
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
     </FxCompile>
-    <FxCompile Include="Shader\ObjectBasicVS.hlsl">
+    <FxCompile Include="Shader\Object3DVS.hlsl">
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
